--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,4 @@
-.container {
+.contents-container {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -24,8 +24,8 @@
 
 .btn {
   position: absolute;
-/*  display: block;*/
-  display: none;
+  display: block;
+/*  display: none;*/
 
   border: 10px solid pink;
   background: white;
@@ -45,18 +45,18 @@
   border-color:green;
 }
 #b {
-  left:945px;
-  top:355px;
+  left:946px;
+  top:352px;
   border-color:red;
 }
 #x {
-  left:805px;
-  top:355px;
+  left:806px;
+  top:352px;
   border-color:blue;
 }
 #y {
   left:875px;
-  top:285px;
+  top:284px;
   border-color:yellow;
 }
 
@@ -156,7 +156,7 @@
   border-bottom-right-radius: 40%;
 }
 
-.stick {
+.stickBtn {
   width: 20px;
   height: 20px;
   border-radius: 50%;
@@ -167,18 +167,78 @@
 
 #l3 { 
   left: 350px;
-  top: 350px;
+  top: 345px;
 }
 #r3 { 
-  left: 730px;
-  top: 500px;
+  left: 731px;
+  top: 497px;
 }
 
 
 /* Must go last for specificity reasons. */
 .btnDown {
-  display: block;
+/*  display: block;*/
+  background: rgb(255, 175, 120);
 }
 .btnHold {
-  background: rgb(255, 175, 120);
+  background: rgb(255, 0, 0);
+}
+
+
+
+.stickCirc {
+  position: absolute;
+  display: block;
+  height: 100px;
+  width: 100px;
+
+  border-radius:50%;
+
+  border: 1px solid red;
+  background: rgba(255,255,255,0.3);
+}
+
+#lCirc {
+  top: 334px;
+  left: 338px;
+}
+
+#rCirc {
+  top: 486px;
+  left: 720px;
+}
+
+.crosshairContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+  width: 10px;
+  height: 10px;
+  margin: 0;
+
+}
+.crosshair {
+  position: relative;
+  top: 0;
+  left: 0;
+  transform: translate(-100%, -100%);
+
+  display:block;
+  height: 10px;
+  width: 10px;
+  margin: 0;
+
+
+/*  border:2px solid red;*/
+  border-radius: 50%;
+  background: red;
+  color: white;
+
+  text-align: center;
+  line-height: 10px;
+  font-size: 10px;
+
+  transform: translate(0,0);
 }
